# SERPENT

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  app.py  pyproject.toml  reproduce_issue.py  requirements.txt  serpent.py
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml  test.yml
.streamlit/: config.toml
charts/: flowchart.dot
code/: app.py  flowchart_core.py  poc_app.py  serpent_core.py  serpent_graphviz.py
code/scripts/: code-to-chart-cli.py
code/test_scripts/: check_number_sign.py  process_fruits.py  sum_of_even_number.py
notebooks/: demo.ipynb
serpent/: __init__.py  app.py  core.py  graphviz.py  serpent_graphviz.py
serpent_scripts/: serpent_graphviz.py
src/serpent/: __init__.py  api.py  core.py  resources.py
tests/: test_app_smoke.py  test_break_continue_colors.py  test_flowchart.py  test_try_except.py
