[tool.poetry]
name = "serpent-viz"
version = "0.1.0"
description = "A Python function to flowchart generator with a Streamlit GUI."
authors = ["Asif Sayyed <asifdotexe@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["flowchart", "code visualization", "streamlit", "graphviz"]
packages = [{include = "serpent"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.46.1"
graphviz = "^0.20.3"
streamlit-extras = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
flake8 = "^7.1.1"

[tool.poetry.scripts]
serpent = "serpent.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"