[tool.poetry]
name = "serpent-flowchart"
version = "0.1.0"
description = "A Python function to flowchart generator."
authors = ["Asif Sayyed <asifdotexe@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["flowchart", "code visualization", "graphviz", "python", "ast"]
packages = [{ include = "serpent", from = "src" }]
repository = "https://github.com/Asifdotexe/SERPENT"
homepage = "https://serpent.streamlit.app"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.3"
streamlit = { version = "^1.46.1", optional = true }
streamlit-extras = { version = "^0.6.0", optional = true }

[tool.poetry.extras]
app = ["streamlit", "streamlit-extras"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
flake8 = "^7.1.1"
black = "^25.12.0"
isort = "^7.0.0"
pylint = "^4.0.4"
pre-commit = "^4.5.1"


[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",
    "assignment-from-no-return",
    "too-many-branches",
    "unused-argument",
    "unnecessary-pass",
    "fixme",
    "too-few-public-methods",
    "broad-exception-caught",
]

[tool.pylint.design]
max-args = 7
max-positional-arguments = 7

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
